--- a/src/Asset/css/styleCss.css
+++ b/src/Asset/css/styleCss.css
@@ -15,3 +15,8 @@
     -fx-background-color: linear-gradient(to right, #fcfcfc 0%, #d4d4d4 51%, #fcfcfc 100%);
     -fx-cursor: hand;
 }
+
+
+.imgPlante {
+-fx-background-radius: 5;
+}
